Fixed minor issues in settings page and fixed menu z-index

--- a/Bundle/WebBundle/Resources/public/scss/layout/_main-menu.scss
+++ b/Bundle/WebBundle/Resources/public/scss/layout/_main-menu.scss
@@ -8,7 +8,7 @@
   text-align: center;
   top: 0;
   width: 80px;
-  z-index: 20;
+  z-index: 30;
 }
 
 .menu-logo {
